--- a/srv/package.json
+++ b/srv/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/request-promise": "^4.1.43",
     "aws-sdk": "^2.457.0",
     "iconv-lite": "^0.4.24",
-    "node-html-parser": "^1.1.15"
+    "node-html-parser": "^1.1.15",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   },
   "devDependencies": {
     "@types/node": "^12.0.2"
